Html file updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <hr>
         <div class="header-links">
             <a href="#">About us</a>
-            <a href="#">Sign In</a>
+            <a href="sign-in.html">Sign In</a>
             <a href="#">Appointment-Booking</a>
              <a href="#"> Post-care-feedback</a>
         </div>
