Working on sing-in page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
 <head>
-<title>
-First Web Page
-</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Samantha Canine Masseuse</title>
+
 </head>
 
 <body>
-Canine Masseuse Website
+    <div class="header">
+        <h1>Samantha Canine Masseuse</h1>
+        <h2>Calm and Comfort: Massage Therapy for All Your Beloved Pets</h2>
+        <hr>
+        <div class="header-links">
+            <a href="#">About us</a>
+            <a href="sign-in.html">Sign In</a>
+            <a href="#">Appointment-Booking</a>
+             <a href="#"> Post-care-feedback</a>
+        </div>
+    </div>
+    
+    
+    <!-- Rest of your website content goes here -->
+
 </body>
+
 </html>
