--- a/sign-in.html
+++ b/sign-in.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="sign-in">
     <div class="signin-container">
         <h1>Welcome Back!</h1>
         <form class="signin-form">
@@ -20,9 +20,9 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
 
-            <button type="submit">Sign In</button>
+            <button  href= "index.html" type="submit">Sign In</button>
         </form>
-        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+        <p>Don't have an account? <a href="sign-up.html">Sign Up</a></p>
     </div>
 </body>
 
