--- a/public/AppointmentBooking.html
+++ b/public/AppointmentBooking.html
@@ -39,10 +39,18 @@
             <label for="service">  Select Service:  </label>
             <select id="selectService" name="selectService" required>
                 <option value="">Select a service</option>
-                <option value="Service 1">Service 1</option>
-                <option value="Service 2">Service 2</option>
-                <option value="Service 3">Service 3</option>
-                <!-- Add more service options as needed -->
+                <option value="Service 1">Massage</option>
+                <option value="Service 4">Emotional Theraphy</option>
+                <option value="Service 5">Aroma theraphy</option>
+                <option value="Service 6">Acupressure</option>
+                <option value="Service 2">Energy work</option>
+               <option value="Service 3">Applied Kinesiology</option>
+               <option value="Service 7">Saddle Fit</option>
+               <option value="Service 8">Magnetics</option>
+               <option value="Service 8">Structutal Manipulations</option>
+ 
+               
+               <!-- Add more service options as needed -->
             </select>
 
             <label for="email">Email:</label>
