--- a/public/Owner-Booking.html
+++ b/public/Owner-Booking.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Manage Clients</a></li>
+                <li><a href="ManageClients.html">Manage Clients</a></li>
                 <li><a href="#">Manage Animals</a></li>
                 <li><a href="#">Forms</a></li>
                 <li><a href="Owner-Booking.html">Appointments</a></li>
