Edit Client page created

--- a/public/ManageClients.html
+++ b/public/ManageClients.html
@@ -24,10 +24,9 @@
         <h1>Client Management</h1>
         <div class="boxContainer" id="containerBox">
             <button class="addClient" onclick="location.href = 'addClient.html'">Add Client</button><br><br>
-            <button class="editClient">Search/Edit Client</button><br><br>
+            <button class="editClient" onclick="location.href = 'editClient.html'">Edit Client</button><br><br>
             <button class="removeClient">Remove Client</button><br><br>
         </div>
     </div>
 </body>
-
 </html>
