--- a/public/addClient.html
+++ b/public/addClient.html
@@ -22,7 +22,7 @@
 
     <div class="clientInformation">
         <h1>Client Information</h1>
-        <div class="clientInfoBox" class="informationContainer">
+        <div class="clientInfoBox" id="informationContainer">
             <label class="FirstName" for="First Name">First Name: </label>
             <input type="text" class="firstName" name="firstName"><br><br>
             <label class="LastName" for="Last Name">Last Name:</label>
@@ -39,7 +39,7 @@
             <input type="text" class="city" name="city"><br><br>
             <label class="PostalCode" for="Postal Code">Postal Code:</label>
             <input type="text" class="postalCode" name="postalCode"><br><br>
-            <label class="UserName for="Username">Username: </label>
+            <label class="UserName" for="Username">Username: </label>
             <input type="text" class="username" name="username"><br><br>
             <label class="PassWord" for="Password">Password: </label>
             <input type="text" class="password" name="password"><br><br>
