--- a/public/ManageClients.html
+++ b/public/ManageClients.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Owner-Booking.html">Appointments</a></li>
-                <li><a href="#">Manage Animals</a></li>
+                <li><a href="manageAnimals.html">Manage Animals</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </nav>
