--- a/public/manageAnimals.html
+++ b/public/manageAnimals.html
@@ -4,50 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Ostyles.css">
-    <title>Samantha Booking</title>
+    <link rel="stylesheet" href="ManageClient.css">
+    <Title>Clients</Title>
 </head>
 
 <body>
-
     <div class="menu-bar">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="ManageClients.html">Manage Clients</a></li>
-                <li><a href="manageAnimals.html">Manage Animals</a></li>
-                <li><a href="#">Forms</a></li>
                 <li><a href="Owner-Booking.html">Appointments</a></li>
+                <li><a href="ManageClients.html">Manage Clients</a></li>
+                <li><a href="#">Forms</a></li>
             </ul>
         </nav>
     </div>
 
-    <div class="container1">
-   
-    <h1>Samantha Booking</h1>  </div>
-    <div class="container">
-        <div class="column" id="requestedAppointments">
-            <h2>Requested Appointments</h2>
-            <ul id="requestedList">
-                <!-- Requested appointments will be dynamically added here -->
-            </ul>
-        </div>
-        <div class="column" id="confirmedAppointments">
-            <h2>Confirmed Appointments</h2>
-            <ul id="confirmedList">
-                <!-- Confirmed appointments will be dynamically added here -->
-            </ul>
+    <div class="clientContainer">
+        <h1>Animal Management</h1>
+        <div class="boxContainer" id="containerBox">
+            <button class="addClient" onclick="location.href = 'addClient.html'">Add Animal</button><br><br>
+            <button class="editClient" onclick="location.href = 'editClient.html'">Edit Animals</button><br><br>
+            <button class="removeClient">Remove Client</button><br><br>
         </div>
     </div>
-
-    <div id="appointmentDetails" class="hidden">
-        <h2>Appointment Details</h2>
-        <div id="appointmentInfo"></div>
-        <button id="approveBtn" onsubmit="onSubmitForm(event)" action="/api/acceptAppointment:id" method="POST">Approve</button>
-        <button id="declineBtn">Decline</button>
-    </div>
-    <script src="ownerbooking.js"></script>
-
 </body>
-
 </html>
