added edit animal files and made manage animals better

--- a/public/manageAnimals.html
+++ b/public/manageAnimals.html
@@ -23,9 +23,8 @@
     <div class="clientContainer">
         <h1>Animal Management</h1>
         <div class="boxContainer" id="containerBox">
-            <button class="addClient" onclick="location.href = 'addClient.html'">Add Animal</button><br><br>
-            <button class="editClient" onclick="location.href = 'editClient.html'">Edit Animals</button><br><br>
-            <button class="removeClient">Remove Client</button><br><br>
+            <button class="addClient" onclick="location.href = 'addAnimal.html'">Add Animal</button><br><br>
+            <button class="editClient" onclick="location.href = 'editAnimals.html'">Edit Animals</button><br><br>
         </div>
     </div>
 </body>
