Modified addClient.html file

--- a/public/ManageClients.html
+++ b/public/ManageClients.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Owner-Booking.html">Appointments</a></li>
                 <li><a href="manageAnimals.html">Manage Animals</a></li>
-                <li><a href="#">Forms</a></li>
+                <li><a href="">Forms</a></li>
             </ul>
         </nav>
     </div>
@@ -25,7 +25,7 @@
         <div class="boxContainer" id="containerBox">
             <button class="addClient" onclick="location.href = 'addClient.html'">Add Client</button><br><br>
             <button class="editClient" onclick="location.href = 'editClient.html'">Edit Client</button><br><br>
-            <button class="removeClient">Remove Client</button><br><br>
+            <button class="removeClient" onclick="location.href = 'removeClient.html'">Remove Client</button><br><br>
         </div>
     </div>
 </body>
