--- a/public/removeClient.html
+++ b/public/removeClient.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="editClient.css">
+    <link rel="stylesheet" href="removeClient.css">
     <Title>Edit Client</Title>
 </head>
 
@@ -34,7 +34,7 @@
     <div class="clientResultShow">
         <h1>Client Information</h1>
         <div class="clientInfo1" id="clientInfo2">
-            <button class="editInfo" onclick="">Edit Client</button>
+            <button class="editInfo" onclick="">Remove Client</button>
         </div>
     </div>
 </body>
