--- a/public/addClient.html
+++ b/public/addClient.html
@@ -43,7 +43,7 @@
             <input type="text" class="username" name="username"><br><br>
             <label class="PassWord" for="Password">Password: </label>
             <input type="text" class="password" name="password"><br><br>
-            <button class="saveInfo" onclick="addClient()">Add Client</button>
+            <button class="saveInfo" onclick="/api/addClient">Add Client</button>
         </div>
     </div>
 </body>
