--- a/public/Owner-Booking.html
+++ b/public/Owner-Booking.html
@@ -43,7 +43,8 @@
     <div id="appointmentDetails" class="hidden">
         <h2>Appointment Details</h2>
         <div id="appointmentInfo"></div>
-        <button id="approveBtn" onsubmit="onSubmitForm(event)" action="/api/acceptAppointment:id" method="POST">Approve</button>
+        <form action="/api/acceptAppointment:id" method="POST">
+        <button id="approveBtn" onsubmit="onSubmitForm(event)" >Approve</button></form>
         <button id="declineBtn">Decline</button>
     </div>
     <script src="ownerbooking.js"></script>
