--- a/public/editAnimals.html
+++ b/public/editAnimals.html
@@ -1,3 +1,30 @@
-<head><Title>Add Client</Title></head>
+<!DOCTYPE html>
+<html lang="en">
 
-//THIS FILE WILL DISPLAY ALL THE ANIMALS AND ALLOW THE USER TO EDIT ANIMAL INFORMATION
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="ManageClient.css">
+    <Title>Clients</Title>
+</head>
+
+<body>
+    <div class="menu-bar">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Owner-Booking.html">Appointments</a></li>
+                <li><a href="ManageClients.html">Manage Clients</a></li>
+                <li><a href="manageAnimals.html">Manage Animals</a></li>
+                <li><a href="#">Forms</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="clientContainer">
+        <h1>List of all animals in the system by alphabetic order, edit button for each that bring to private page displaying the info for that animal</h1>
+        <div class="boxContainer" id="containerBox">
+        </div>
+    </div>
+</body>
+</html>
