sign-in database for admin

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             <a href="AppointmentBooking.html">Appointment Booking  </a>
             <a href="Feedback.html"> Feedback</a>
             <a href="sign-in.html">Sign In  </a>
-            <a href="sign-in.html">About us  </a>
+            <a href="#">About us  </a>
             <a href="#Contact">Contact</a>
         </div>
         <div class="phone">
