--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -12,7 +12,7 @@
 <body class="sign-in">
     <div class="signin-container">
         <h1>Welcome Back!</h1>
-        <form class="signin-form">
+        <form class="signin-form" action="/signin" method="POST">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
