Saving client information to the database.

--- a/public/addClient.html
+++ b/public/addClient.html
@@ -23,25 +23,23 @@
     <div class="clientInformation">
         <h1>Client Information</h1>
         <div class="clientInfoBox" id="informationContainer">
-            <label class="FirstName" for="First Name">First Name: </label>
-            <input type="text" class="firstName" name="firstName"><br><br>
-            <label class="LastName" for="Last Name">Last Name:</label>
-            <input type="text" class="lastName" name="lastName"><br><br>
-            <label class="EMAIL" for="Email">Email:</label>
-            <input type="text" class="email" name="email"><br><br>
-            <label class="PhoneNumber" for="Phone Number">Phone Number:</label>
-            <input type="text" class="phoneNumber" name="phoneNumber"><br><br>
-            <label class="UserName" for="Username">Username: </label>
-            <input type="text" class="username" name="username"><br><br>
-            <label class="PassWord" for="Password">Password: </label>
-            <input type="text" class="password" name="password"><br><br>
-            <button class="saveInfo" onclick="addClient()">Add Client</button>
+            <form method="post" action="/saveClient">
+                <label class="FirstName" for="First Name">First Name: </label>
+                <input type="text" class="firstName" name="firstName"><br><br>
+                <label class="LastName" for="Last Name">Last Name:</label>
+                <input type="text" class="lastName" name="lastName"><br><br>
+                <label class="EMAIL" for="Email">Email:</label>
+                <input type="text" class="email" name="email"><br><br>
+                <label class="PhoneNumber" for="Phone Number">Phone Number:</label>
+                <input type="text" class="phoneNumber" name="phoneNumber"><br><br>
+                <label class="UserName" for="Username">Username: </label>
+                <input type="text" class="username" name="username"><br><br>
+                <label class="PassWord" for="Password">Password: </label>
+                <input type="text" class="password" name="password"><br><br>
+                <button type="submit" class="saveInfo">Add Client</button>
+            </form>
         </div>
     </div>
-    <script type="text/javascript">
-        function addClient() {
-        }
-    </script>
 </body>
 
 </html>
