--- a/public/addAnimal.html
+++ b/public/addAnimal.html
@@ -24,15 +24,17 @@
     <div class="animalInformation">
         <h1>Animal Information</h1>
         <div class="animalInfoBox" id="informationContainer">
-            <label class="AnimalName" for="animalName">Animal Name: </label>
-            <input type="text" class="animalName" name="animalName"><br><br>
-            <label class="AnimalID" for="animalID">Animal ID:</label>
-            <input type="text" class="animalID" name="animalID"><br><br>
-            <label class="Owner" for="owner">Owner:</label>
-            <input type="text" class="ownerr" name="owner"><br><br>
-            <label class="Breed" for="breed">Breed:</label>
-            <input type="text" class="breed" name="breed"><br><br>
-            <button class="saveInfo" onclick="addAnimal()">Add animal</button>
+            <form method="post" action="/saveAnimal">
+                <label class="AnimalName" for="animalName">Animal Name: </label>
+                <input type="text" class="animalName" name="animalName"><br><br>
+                <label class="AnimalID" for="animalID">Animal ID:</label>
+                <input type="text" class="animalID" name="animalID"><br><br>
+                <label class="Owner" for="owner">Owner:</label>
+                <input type="text" class="ownerr" name="owner"><br><br>
+                <label class="Breed" for="breed">Breed:</label>
+                <input type="text" class="breed" name="breed"><br><br>
+                <button type="submit" class="saveInfo">Add Animal</button>
+            </form>
         </div>
     </div>
 </body>
