--- a/public/ManageClients.html
+++ b/public/ManageClients.html
@@ -24,8 +24,7 @@
         <h1>Client Management</h1>
         <div class="boxContainer" id="containerBox">
             <button class="addClient" onclick="location.href = 'addClient.html'">Add Client</button><br><br>
-            <button class="editClient" onclick="location.href = 'editClient.html'">Edit Client</button><br><br>
-            <button class="removeClient" onclick="location.href = 'removeClient.html'">Remove Client</button><br><br>
+            <button class="editClient" onclick="location.href = 'editRemoveClient.html'">Edit/Remove Client</button><br><br>
         </div>
     </div>
 </body>
