added animal search functionality

--- a/public/addAnimal.html
+++ b/public/addAnimal.html
@@ -26,13 +26,13 @@
         <div class="animalInfoBox" id="informationContainer">
             <form method="post" action="/saveAnimal">
                 <label class="AnimalName" for="animalName">Animal Name: </label>
-                <input type="text" class="animalName" name="animalName"><br><br>
+                <input type="text" class="animalName" name="animalName" required><br><br>
                 <label class="AnimalID" for="animalID">Animal ID:</label>
-                <input type="text" class="animalID" name="animalID"><br><br>
+                <input type="text" class="animalID" name="animalID" required><br><br>
                 <label class="Owner" for="owner">Owner:</label>
-                <input type="text" class="ownerr" name="owner"><br><br>
+                <input type="text" class="ownerr" name="owner" required><br><br>
                 <label class="Breed" for="breed">Breed:</label>
-                <input type="text" class="breed" name="breed"><br><br>
+                <input type="text" class="breed" name="breed" required><br><br>
                 <button type="submit" class="saveInfo">Add Animal</button>
             </form>
         </div>
