--- a/public/editClient.html
+++ b/public/editClient.html
@@ -53,7 +53,7 @@
             if (response.ok) {
                 const data = await response.json();
                 if (data.length === 0) {
-                    document.getElementById("clientInfo2").innerHTML = 'No Resuls Found';
+                    document.getElementById("clientInfo2").innerHTML = 'No Results Found';
                 } else {
                     data.forEach(client => {
                         document.getElementById("clientInfo2").innerHTML = `
@@ -67,7 +67,7 @@
                 }
                 //document.getElementById("clientInfo2").innerHTML = JSON.stringify(data);
             } else {
-                document.getElementById("clientInfo2").innerHTML = "No Resuls Found";
+                document.getElementById("clientInfo2").innerHTML = "No Results Found";
                 console.log('Failed to fetch client information');
             }
         } catch (error) {
