--- a/public/editAnimals.html
+++ b/public/editAnimals.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ManageClient.css">
-    <Title>Clients</Title>
+    <link rel="stylesheet" href="editAnimals.css">
+    <Title>Edit Animal</Title>
 </head>
 
 <body>
@@ -14,17 +14,68 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Owner-Booking.html">Appointments</a></li>
-                <li><a href="ManageClients.html">Manage Clients</a></li>
                 <li><a href="manageAnimals.html">Manage Animals</a></li>
+                <li><a href="ManageClients.html">Manage animals</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </nav>
     </div>
 
-    <div class="clientContainer">
-        <h1>List of all animals in the system by alphabetic order, edit button for each that bring to private page displaying the info for that animal</h1>
-        <div class="boxContainer" id="containerBox">
+    <div class="animalLookUp">
+        <h1>Animal Search</h1>
+        <div class="animalInfo" id="animalInfoBox2">
+            <form method="get" action="/animalInfo">
+                <label class="Name1" for="name1">Name:</label>
+                <input type="text" id='name1' class="Name1" name="Name1" required><br><br>
+                <label class="ID1" for="iD1">ID:</label>
+                <input type="text" id='id1' class="iD1" name="iD1" required><br><br>
+                <button type="button" onclick="searchanimal()" class="searchInfo">Search animal</button>
+            </form>
         </div>
     </div>
+
+    <div class="animalResultShow">
+        <h1>animal Information</h1>
+        <div class="animalInfo1" id="animalInfo2">
+        </div>
+        <button class="editInfo" onclick="">Edit animal</button>
+    </div>
 </body>
+<script>
+    async function searchanimal() {
+        const name = document.getElementById("name1").value;
+        const ID = document.getElementById("id1").value;
+
+        try {
+            const response = await fetch(`/animalInfo?name1=${name}&id1=${ID}`, {
+                method: 'GET',
+            });
+
+            if (response.ok) {
+                const data = await response.json();
+                if (data.length === 0) {
+                    document.getElementById("animalInfo2").innerHTML = 'No Results Found';
+                } else {
+                    data.forEach(animal => {
+                        document.getElementById("animalInfo2").innerHTML = `
+                        <p>Name: ${animal.Name}</p>
+                        <p>ID: ${animal.ID}</p>
+                    `;
+                    })
+                }
+                //document.getElementById("animalInfo2").innerHTML = JSON.stringify(data);
+            } else {
+                document.getElementById("animalInfo2").innerHTML = "No Results Found";
+                console.log('Failed to fetch animal information');
+            }
+        } catch (error) {
+            console.error(error);
+        }
+
+        document.getElementById("name1").value = "";
+        document.getElementById("id1").value = "";
+    }
+
+</script>
+
 </html>
