--- a/public/Owner-Booking.html
+++ b/public/Owner-Booking.html
@@ -16,10 +16,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="ManageClients.html">Manage Clients</a></li>
+                <li><a href="manageClients.html">Manage Clients</a></li>
                 <li><a href="manageAnimals.html">Manage Animals</a></li>
                 <li><a href="#">Forms</a></li>
-                <li><a href="Owner-Booking.html">Appointments</a></li>
             </ul>
         </nav>
     </div>
