--- a/public/manageAnimals.html
+++ b/public/manageAnimals.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ManageClient.css">
+    <link rel="stylesheet" href="manageAnimals.css">
     <Title>Clients</Title>
 </head>
 
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Owner-Booking.html">Appointments</a></li>
-                <li><a href="ManageClients.html">Manage Clients</a></li>
+                <li><a href="manageClients.html">Manage Clients</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </nav>
@@ -24,7 +24,7 @@
         <h1>Animal Management</h1>
         <div class="boxContainer" id="containerBox">
             <button class="addClient" onclick="location.href = 'addAnimal.html'">Add Animal</button><br><br>
-            <button class="editClient" onclick="location.href = 'editAnimals.html'">Edit Animals</button><br><br>
+            <button class="editClient" onclick="location.href = 'editRemoveAnimal.html'">Edit/Remove Animal</button><br><br>
         </div>
     </div>
 </body>
