--- a/public/userMenu.html
+++ b/public/userMenu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="userMenu.css">
-    <title>My Menu</title>
+    <title>Main Menu</title>
 </head>
 
 <body>
